--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -41,7 +41,7 @@ Signals at the detector can be predicted using the theory of Chapter \ref{ch:3-o
 
 % TODO compare these results to the sims: currently sims predict 50 times lower intensity, comment that at least for the KAP crystal we have room to apodized and reduce beam divergence and increase signal so we should get this at least
 
-\section{First observation of ZVP electron bunches}\label{sec:ch4-zvp}
+\section{Observation of ZVP electron bunches}\label{sec:ch4-zvp}
 The second stage of the GEMINI PW experiment is the first observation of ZVP electron bunches both mass-limited and bulk-produced. There has been some experimental evidence of attosecond and nano-Coulomb electron bunch generation from nano-targets \cite{cardenasSubcycleDynamicsRelativistic2019,hornyGenerationSingleAttosecond2021} and in reflection from solids \cite{linIsolatedAttosecondElectron2020, thevenetVacuumLaserAcceleration2016} with the latter demonstrating satisfaction of the specific conditions for \ac{VLA} to 10 MeV for a mildly relativistic laser pulse ($a_0 \approx 3.1$). These experiments have guided the planning process for this experiment stage.
 
 This experiment aspires to produce mass-limited ZVP electron bunches in the configuration simulated in Figure \ref{fig:experimentsetuphhgbunches2}. % TODO repeat this simulation with the Silicon wafer target
@@ -51,33 +51,32 @@ This experiment aspires to produce mass-limited ZVP electron bunches in the conf
 	\caption[Planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches.]{A simulation of the planned GEMINI-PW experimental setup for the measurement of ZVP electron bunches. This novel setup enables the simultaneous measurement of attosecond ZVP electron bunches and their coherent emission of X-ray light. The GEMINI-PW laser pulse is incident at \qty{45}{\degree} on the low-density polyethylene target with a preplasma scale length of $0.2\lambda_\mathrm{L}$. For this angle of incidence, transmitted bunches and specularly reflected X-ray harmonics are produced at a frequency of $\omega_\mathrm{L}$.}
 	\label{fig:experimentsetuphhgbunches2}
 \end{figure}
-By focusing the laser pulse onto the edge of a transversely mass-limited target, the emitted electron bunch energies will be maximised. Simulations suggest it should be possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond electron bunches that produce it. Note via equations \ref{eq:zvp_N} and \ref{eq:zvp_T}, the low-density target of Figure \ref{fig:experimentsetuphhgbunches2} will produce larger and more energetic bunches. They are therefore a more practical choice for the experiment relative to the aluminium targets of predominant use in Chapter \ref{ch:2-zvp}. Both bulk and mass-limited ZVP electron bunches will be generated but should be spatially separated at the observation point via conservation of transverse momentum with bulk bunches experiencing no further acceleration phases post ZVP.
+Emitted electron bunch energies are maximised by focusing the 2 micron laser spot onto the corner of a transversely mass-limited target. The simulations suggest it is possible to simultaneously measure the specularly reflected \ac{HHG} and the attosecond ZVP electron bunches that produce it. Note via equations \ref{eq:zvp_N} and \ref{eq:zvp_T}, the low-density target of Figure \ref{fig:experimentsetuphhgbunches2} are a more practical choice for the experiment relative to the aluminium targets of predominant use in Chapter \ref{ch:2-zvp}, producing larger and more energetic bunches. Both bulk and mass-limited ZVP electron bunches will be generated. Via conservation of transverse momentum, the two species will be spatially separated at the observation point with bulk bunches at lower energies, experiencing no further acceleration phases post ZVP.
 
-It is necessary to conduct PIC code parameter scans for this new geometry. While normal incidence was most convenient for the initial ZVP simulations, oblique incidence is more optimal for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and as can be understood from equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions, for the ZVP mechanism. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at the focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is indispensable, therefore, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection.
+While normal incidence was most convenient for the initial ZVP simulations, oblique incidence is more optimal for \ac{HHG} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011, edwardsXRayEmissionEffectiveness2020} and as can be understood from equations \ref{eq:zvp_Tzvp_theta} and \ref{eq:zvp_Uzvp_theta}, the new energy scaling expressions, for the ZVP mechanism. Not only is oblique preferable but it is essential to mitigate damage to the laser optics via back-reflection. The \ac{HHG} beam intensity at the focus can be over 1000 times that of the incident laser pulse \cite{quereReflectingPetawattLasers2021}. It is necessary to conduct PIC code parameter scans for this new geometry.
 
-For target edge shots, high edge precision is essential. To overcome this challenge CLF Target Fabrication has created 300 $\mu$m silicon wafer targets via the Bosch process with well-defined edges of sub-micron precision. The target design is given in Figure \ref{geminisiliconwafer}a.
+High target edge precision is essential for the generation of attosecond duration ZVP electron bunches. The CLF Target Fabrication team has created 300 $\mu$m silicon wafer targets via the Bosch process with well-defined edges of sub-micron precision. The target design is presented in Figure \ref{geminisiliconwafer}a.
 \begin{figure}
 	\centering
 	\includegraphics{figures/gemini/gemini_silicon_wafer}
-	\caption[Attosecond ZVP electron bunch targets]{\textbf{Targets designed for observation of ZVP electron bunches.} a) Target array design with conical array holder and tapered finger design, lengths in mm. b) Scan of the etched wafer, striations develop towards target rear due to etching technique. c) A 3D plot of surface variation. Scalloping and striations are visible but too small to interfere with laser pulse transmission at \qty{45}{\degree}. d) Lineouts of c), the $y$-profile is along the target edge of interest.}
+	\caption[Attosecond ZVP electron bunch targets]{\textbf{Targets designed for observation of ZVP electron bunches.} a) Target array design with conical array holder and tapered finger, lengths in mm. b) Scan of the etched wafer, striations develop towards target rear due to etching technique. c) A 3D plot of surface variation. Scalloping and striations are visible but too small to interfere with laser pulse transmission at \qty{45}{\degree}. d) Lineouts of c), the $y$-profile is along the target edge of interest.}
 	\label{fig:geminisiliconwafer}
 \end{figure}
-The tapered finger design adds a failure point to the target to mitigate damage to adjacent targets via shock propagation. The cone of the array holder is of sufficient size for the full laser pulse to access the target edge. Scans, detailed in Figure \ref{fig:geminisiliconwafer} found an average surface roughness of \qty{74.4}{nm}. The etching technique leads to scalloping of the surface parallel to the target surface and striations perpendicular to the surface towards the target rear. Neither pose any issue with regards to interfering with the laser pulse in transmission. Scans were performed and targets were designed by Sam Astbury \cite{astburyTargetFabricationGroup2024}. Before firing target edges, HHG production will be optimised for unstructured silicon wafer targets, providing information on bulk propagating ZVP electron bunches. Again, a quarter-wave plate can be implemented to suppress the ZVP mechanism in the absence of vector potential zeroes.
+The tapered finger structure adds a failure point to mitigate damage to adjacent targets via shock propagation. The cone of the array holder is of sufficient size for the full laser pulse to access the target edge. Scans, detailed in Figure \ref{fig:geminisiliconwafer}, found an average surface roughness of \qty{74.4}{nm}. The etching technique leads to scalloping of the surface parallel to the target surface and perpendicular striations towards the target rear. Neither pose any concern with regards to interfering with the laser pulse in transmission. The target design and scans were performed by Sam Astbury \cite{astburyTargetFabricationGroup2024}. Before firing target edges, HHG production will be optimised for unstructured silicon wafer targets, providing information on the bulk propagating ZVP electron bunches for comparison with the mass-limited case. Again, a quarter-wave plate can be implemented to suppress the ZVP mechanism in the absence of vector potential zeroes.
 
-%TODO adds pictures of silicon targets.
-It is anticipated there is some relaxation of the requirement for sub-micron precision from target smoothing via preplasma expansion and the smoothing effect of the main pulse interaction as noted by Dromey \textit{et al} \cite{dromeyDiffractionlimitedPerformanceFocusing2009}. Furthermore, transmission direction is dictated by laser vector potential and not surface angle, unlike reflection. At worst ZVP energy scalings will be mildly affected by the change in angle. Thus tape drives will also be explored as an option. However, the \qty{50}{\mu m} jitter of such devices suggests a success rate of $\sim$ 4 \%. This is not necessarily unreasonable. Shot-to-shot variations in laser pulse focal spot position are typically on the order of the focal spot itself. Therefore only a third of silicon target shots will be successful and will depend on the gathering of sufficient statistics as will be possible with the high repetition rate of the GEMINI PW laser facility. Successful shots will be identified using a third harmonic imaging line \cite{dromeyThirdHarmonicOrder2009}. This can also be used to reduce uncertainty in the hole boring calculations since it is typically a must closer match to the real laser spot size than the X-ray emission spot since the non-linearity of the interaction reduces any background noise giving a clear signal. For high resolution, the collimating reflective optic must be placed roughly the distance of the f/2 parabola focal length from the main interaction. So close to the interaction, the B-integral is typically large and ND filters and lenses cannot be used. Instead, a wedge, typically double-passed acts as an attenuator. A hole allows the less divergent higher orders through, enabling on-shot measurement. Far from the interaction, the third harmonic signal can be extracted, filtered, refocused and imaged. Note that while some of the light is reflected to the target via the wedge on the second pass, this is not a concern since the focal length of the new optic will be larger than that of the $f/2$ parabola and typical path lengths are about a nanometre at which time the target does not reflect specularly. 
+Some relaxation can be anticipated in the requirement for sub-micron precision. There will be some target smoothing via preplasma expansion and the smoothing effect of the main pulse interaction as noted by Dromey \textit{et al} \cite{dromeyDiffractionlimitedPerformanceFocusing2009}. Furthermore, transmission direction is dictated by laser vector potential and not surface angle, unlike reflection. At worst, ZVP energy scalings will be mildly affected by the change in angle. Thus tape drives will also be explored as an option. However, the \qty{50}{\mu m} jitter of such devices suggests a success rate of $\sim$ 4 \%. The gathering of sufficient statistics is not necessarily unreasonable with the high shot rate of GEMINI PW. Shot-to-shot variations in laser pulse focal spot position are typically on the order of the focal spot itself. It is likely therefore that a third of silicon wafer target shots will hit a adequate portion of the target edge. 
 
-Resolving the \qty{16}{\mu m} GEMINI PW spot is significantly more challenging than the \qty{6}{\mu m} spot of the 1 J Astra-GEMINI laser system. This imaging line has been modelled by the ORION laser scientists using Zemax \cite{AnsysZemaxOpticStudio} accounting for all diffraction and spherical aberration. They have identified a set-up using an \ac{OAP} for collimation and a spherical mirror for imaging that provides \qty{1.7}{\mu m} resolution with 20 times magnification, comfortably resolving the spot. However, this setup is highly sensitive to the \ac{OAP} position taking a significant time to align, ideally, this should only be performed once. Note that while path lengths vary between atmospheric pressure and under vacuum, there is no hysteresis from cycling the chamber. While the high spatial orders associated with the clipping of the reflected beam at the target edge could not be resolved, this should significantly alter the image structure, enough to identify the surface edge. 
+Successful shots will be identified using a third harmonic imaging line \cite{dromeyThirdHarmonicOrder2009}. This diagnostic will also reduce the uncertainty of the hole boring calculations. The non-linearity of the third harmonic production mechanism reduces the possibility of background noise, producing a clear signal and a closer match to the true spot size than the X-ray emission diagnostics of the ORION experiment. For high resolution, the collimating reflective optic must be placed roughly the distance of the $f/2$ parabola focal length from the main interaction. Near the main interaction region, the B-integral is large thus precluding the use of ND filters and lenses. Instead, a wedge, typically double-passed acts as an attenuator to extract the lower order highly divergent harmonics. A hole allows the less divergent higher orders through, enabling on-shot measurement. Far from the interaction, the collimated third harmonic signal can be extracted, filtered, refocused and imaged. Some light is reflected to the target via the wedge on the second pass, however this is not a concern. The focal length of the new optic is larger than that of the $f/2$ parabola and path lengths are on the order of a nanometre at which time the target does not reflect specularly. 
 
-The main concern of this method is that over time the wedge will be coated by material ablated from the main target interaction and will need to be replaced to prevent absorption increases and corresponding heat damage. The sensitivity to wedge position is being investigated.
+Resolving the \qty{16}{\mu m} GEMINI PW spot is significantly more challenging than the \qty{6}{\mu m} spot of the 1 J Astra-GEMINI laser system. This imaging line has been modelled by the ORION laser scientists using Zemax \cite{AnsysZemaxOpticStudio} accounting for all diffraction and spherical aberration. They have identified a set-up using two spherical mirrors for collimated and imaging that provides \qty{10}{\mu m} resolution with 20 times magnification, reasonably resolving the spot. While the high spatial orders associated with the clipping of the reflected beam at the target edge cannot be resolved, this should significantly alter the image structure, enough to identify their presence. Over time the wedge will be coated by material ablated from the main target interaction and will need to be replaced to prevent absorption increases and corresponding heat damage.
 
-The size of the wedge hole must be established. Sitting somewhere between the near and far field, to first order, rays from all parts of the spot are lost equally through the hole in the wedge. After passing through the optical system, therefore, the wedge hole should simply reduce the signal at the image plane and not affect the resolution but should also be modelled. Potentially, one could argue that the wedge can reduce the spherical aberration since only paraxial rays are removed. The larger the hole the less likely the clipping of the potentially highly divergent high harmonic beam eventually this will impact the third harmonic image resolution. At the very least we must fully illuminate the OHREX crystal requiring a half angle of \qty{0.71}{\degree}.
+The size of the wedge hole must be established. Sitting somewhere between the near and far field, to first order, rays from all parts of the spot are lost equally through the hole in the wedge. After passing through the optical system, therefore, the wedge hole should simply reduce the signal at the image plane and not affect the resolution but should be modelled. One could argue that the wedge can reduce the spherical aberration by the removal of paraxial rays. The larger the hole the less likely the clipping of the potentially highly divergent high harmonic beam. Eventually this will impact the third harmonic image resolution. At a minimum the OHREX crystal must be fully illuminated requiring a half angle of \qty{0.71}{\degree}.
 %TODO decribe B integral
 
 %TODO double-check these numbers
-Applying the extended ZVP theory to the oblique incidence case for GEMINI PW parameters predicts electron bunches with a charge of $\approx$10 nC and energy of $\approx$30 MeV.
+Applying the extended ZVP theory to the oblique incidence case for GEMINI PW parameters predicts electron bunches with a charge of $\approx$10 nC and energy of $\approx$30 MeV. Thus, a \qty{15}{\mu m} of aluminium foil filter will reject the laser light without significantly affecting the electron bunches.
 % TODO calculate the angle of electron bunch and divergence in a sim
-First a LANEX screen will be imaged to identify mass-limited and bulk electron bunch trajectories and beam divergences, anticipated to be significant. An MeV electron spectrometer aligned to the target edge can then measure the time-integrated energy spectrum. The spatially separated bunch types can be independently measured by adjusting the spectrometer position. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle, it may be necessary to perform this if the bunch types overlap due to high divergence for accurate spectrometer positioning \cite{mordovanakisQuasimonoenergeticElectronBeams2009}. 
+Firstly, mass-limited and bulk electron bunch trajectories and beam divergences will be imaged on a LANEX screen. An MeV electron spectrometer aligned to the target edge can then measure the time-integrated energy spectrum. The spatially separated bunch types can be independently measured by adjusting the spectrometer position. Mordovanakis \textit{et al} used Image Plate stacks to obtain the electron bunch structure and emission angle. This may prove necessary if the bunch types overlap due to high divergence \cite{mordovanakisQuasimonoenergeticElectronBeams2009}. 
 
 While resolving attosecond durations remains a serious technical challenge of experimental science, we hope to measure the production of Coherent Transition Radiation from a secondary target and therefore infer the presence of a bunch train \cite{linIsolatedAttosecondElectron2020}. 
 
@@ -89,36 +88,35 @@ When electrons pass from one medium to another they emit transition radiation, i
 
 % TODO add somewhere: Note that in the absence of attosecond resolution diagnostics, measuring the harmonic spectrum of the coherent \ac{HHG} is the only way to reconstruct the temporal shape of the pulse. Simulations have suggested that the reflected spectrum produced by Coherent Synchrotron Emission of the electron bunches is approximately Fourier-limited \cite{cousensElectronTrajectoriesAssociated2020}.
 
+% here with the edits
 \section{Application of HHG to white light Laue diffraction}\label{sec:ch4-laue}
-The ultimate goal is the generation of an attosecond X-ray diagnostic to illuminate crystal dynamics on such timescales. This remains a distant goal. Inspired by Laue diffraction measurements demonstrating dislocation microstructure of shocked crystals \cite{suggitNanosecondWhitelightLaue2012}, this will be a proof of principle test of Laue diffraction using an X-ray harmonic beam of a single unshocked crystal.
+The eventual but still somewhat distant goal is the generation of an attosecond X-ray diagnostic to illuminate crystal dynamics on attosecond timescales. Inspired by Laue diffraction measurements demonstrating dislocation microstructure of shocked crystals \cite{suggitNanosecondWhitelightLaue2012}, this will be a proof of principle test of Laue diffraction from an X-ray harmonic beam of a single unshocked crystal.
 
-The first X-ray crystal diffraction experiment was Laue diffraction and it was Laue diffraction that led to the arrival of Bragg's law,
+It was Laue diffraction that led to the discovery of Bragg's law,
 \begin{equation}\label{eq:gemini-braggs_law}
 	n\lambda = 2d\sin\theta
 \end{equation}
-for diffraction order, $n$, incident wavelength, $\lambda$, the distance between crystal planes, $d$, and angle between the crystal plane and the incident photon, $\theta$ \cite{braggDiffractionWaves1915}. In Laue diffraction, by irradiating a crystal target with a `white light', \textit{i.e. } a broadband X-ray source, Equation \ref{eq:gemini-braggs_law} is satisfied by a range of crystal planes and angles simultaneously, producing Laue spots accordingly. The quasi-broadband X-ray harmonic beam is suited to such an experiment if enough signal can be obtained.
+for diffraction order, $n$, incident wavelength, $\lambda$, the distance between crystal planes, $d$, and angle between the crystal plane and the incident photon, $\theta$ \cite{braggDiffractionWaves1915}. Irradiation of a crystal target with a `white light', \textit{i.e. } a broadband X-ray source, Equation \ref{eq:gemini-braggs_law} is satisfied for a range of crystal planes and corresponding angles simultaneously, \textit{producing Laue spots} accordingly. The quasi-broadband X-ray harmonic beam is well suited to such an experiment provided sufficient photon numbers can be obtained.
 
-This will be attempted using the \ac{BBXRD} placed in the path of the specularly reflected beam roughly 50 cm from the target. This lead-shielded box contains the crystal sample with IP lining the inner walls. A hole allows the harmonic beam into the box. Placed at an angle on a rotatable washer enables a range of angles and corresponding energies to be investigated. Starting with quartz to investigate the photon energies of 1.7 - 2.5 keV and moving to silicon to explore energies of 2.4 - 3.3 keV. The IP must be shielded to reject laser light, beryllium would be most suitable. It may be necessary to integrate many shots to produce the Laue spot.
+This will be attempted using the \ac{BBXRD} diagnostic placed in the path of the specularly reflected beam and roughly 50 cm from the target. The lead-shielded and IP lined BBXRD contains the crystal sample with a hole to allow the harmonic beam to enter. The sample is placed at an angle on a rotatable washer enabling a range of angles and corresponding energies to be tested: starting with a quartz target to investigate photon energies of 1.7 - 2.5 keV and moving to silicon to explore energies of 2.4 - 3.3 keV. The IP must be shielded to reject laser light, beryllium is most suitable. It may be necessary to integrate over multiple shots to produce the Laue spot.
 
 \section{Contrast}\label{sec:ch4-contrast}
 
 \subsection{Contrast intro}
 % TODO move this elsewhere and add to HHG optima discussion
-High-power laser systems have inherent prepulses of ionising intensities. This preheats a target leading to thermal expansion prior to the arrival of the main pulse, producing an exponential preplasma, $n_\mathrm{e} \sim e^{x/L}$. HHG is exceedingly sensitive to this preplasma formation and has evoked particular interest in the field \cite{behmkeControllingSpacingAttosecond2011, rodelHarmonicGenerationRelativistic2012, dollarScalingHighorderHarmonic2013, kahalyDirectObservationDensityGradient2013, vincentiAchievingExtremeLight2019,behmkeControllingSpacingAttosecond2011} with both simulation and experimental evidence. While there is some variation in optimal values, optima are typically small relative to the laser wavelength, with scale lengths, $L \approx 0.1 \lambda_\mathrm{L}$. The difficulty in measuring such small lengths perhaps goes some of the way to explain the variety of suggested optima. 
+High-power laser systems have inherent prepulses of ionising intensities. They will preheat a target leading to thermal expansion prior to the arrival of the main pulse, producing an exponential preplasma, $n_\mathrm{e} \sim e^{x/L}$. HHG is exceedingly sensitive to this preplasma formation, evoking particular interest in the field \cite{behmkeControllingSpacingAttosecond2011, rodelHarmonicGenerationRelativistic2012, dollarScalingHighorderHarmonic2013, kahalyDirectObservationDensityGradient2013, vincentiAchievingExtremeLight2019,behmkeControllingSpacingAttosecond2011}. While there is some variation in quoted optimal values, they are generally small relative to the laser wavelength, with scale lengths, $L \approx 0.1 \lambda_\mathrm{L}$. The difficulty in measuring such small lengths perhaps goes some of the way to explain the variety of suggested optima. 
 
-For very short preplasma scale lengths \ac{CWE} dominates over HHG. Kahaly \textit{et al} demonstrated experimentally that harmonic emission varied smoothly with reducing laser contrast from the CWE regime to the HHG regime to HHG suppression \cite{kahalyDirectObservationDensityGradient2013}. As can be understood increasing the preplasma scale length increases the amplitude of surface oscillations, increasing HHG production, however, there reaches a point where parametric instabilities in the underdense region begin to dominate \cite{dollarScalingHighorderHarmonic2013}.
+% TODO find out where CWE dominates
+For $L \leqq 0.01 \lambda_\mathrm{L}$, \ac{CWE} dominates over HHG. Kahaly \textit{et al} demonstrated experimentally that harmonic emission varied smoothly from the CWE regime to the HHG regime to HHG suppression as the laser contrast was reduced  \cite{kahalyDirectObservationDensityGradient2013}. Increasing the preplasma scale length increases the amplitude of surface oscillations, increasing HHG production. However, if the scale length is too large, parametric instabilities in the underdense region begin to dominate and HHG is suppressed \cite{dollarScalingHighorderHarmonic2013}. The use of 1D hydrodynamic codes to measure prepulses from laser contrast trace measurements has become standard practice \cite{behmkeControllingSpacingAttosecond2011, dollarScalingHighorderHarmonic2013, liExperimentalDemonstrationEfficient2022}. Although, this shall be called into question in the following.
 
-The use of 1D hydrodynamic codes to measure prepulses from laser contrast trace measurements has become standard practice \cite{behmkeControllingSpacingAttosecond2011, dollarScalingHighorderHarmonic2013, liExperimentalDemonstrationEfficient2022}, however, this shall be called into question in the following.
+Fortunately, there are many approaches to control the various steps of preplasma generation. The heating effect of the prepulse can be reduced by reducing the angle of incidence or the prepulse itself can be reduced by reducing the intensity of the beam through apodisation or use of a frequency doubling crystal. A secondary beamline can generate a controllable prepulse \cite{kahalyDirectObservationDensityGradient2013}, and the surface can be recompressed using a circularly polarised prepulse that will cause minimal heating \cite{liExperimentalDemonstrationEfficient2022}.
 
-Fortunately, there are several approaches to control various aspects of the process of preplasma expansion. Plasma mirrors are effective tools for increasing laser contrast. These single-use optics typically have an \ac{AR} coating of reflectivity $R_1$. As the laser fluence passes the damage threshold of the optic, plasma forms on the front surface. The laser is focused onto the optic such that only the main pulse will ionise the optic, leading to a high reflectivity $R_2$ when `switched-on'. The \ac{PM} therefore ups the contrast by a factor $R_2/R_1$. There is a balancing act in choosing the peak intensity on the \ac{PM}. Too low and switch on occurs too late and $R_2$ is reduced. Too early and the PM will switch on before the arrival of the main pulse. A peak intensity around \qty{1e16}{W.cm^{-2}} is optimum \cite{caiTimeresolvedMeasurementsReflectivity2009}. PMs can also act as a low-pass spatial filter, improving the quality of the focal spot on target \cite{doumyCompleteCharacterizationPlasma2004}. The heating effect of the prepulse can be reduced by reducing the angle of incidence or the prepulse itself can be reduced by reducing the intensity of the beam through apodisation or use of a frequency doubling crystal. A secondary beamline can generate a controllable prepulse \cite{kahalyDirectObservationDensityGradient2013}, and the surface can be recompressed using a circularly polarised prepulse that will cause minimal heating \cite{liExperimentalDemonstrationEfficient2022}. Alternatively, the intensity on PM can be reduced, again costing in the peak intensity of the main pulse interaction.
-
-
-
+Plasma mirrors are effective and now standardised tools for the improvement of laser contrast. These single-use optics initially have an \ac{AR} coating of reflectivity $R_1$. As the incident laser fluence passes the damage threshold of the optic, plasma forms on the front surface. The optic is `switched on' with a reflectivity $R_2$. The \ac{PM} therefore improves the contrast by a factor $R_2/R_1$. There is a balancing act in choosing the peak intensity on the \ac{PM}. Too early and the PM will switch on before the arrival of the main pulse. Too low and switch on occurs too late and $R_2$ is reduced. A peak intensity around \qty{1e16}{W.cm^{-2}} is best \cite{caiTimeresolvedMeasurementsReflectivity2009}. PMs act as a low-pass spatial filter, improving the quality of the focal spot on target \cite{doumyCompleteCharacterizationPlasma2004}. 
 
 \subsection{Contrast on GEMINI PW}
 % Observation of the ZVP mechanism and HHG production requires a sufficiently steep density gradient at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before the arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup prior to the main interaction \cite{doumyCompleteCharacterizationPlasma2004}. Investigation of preplasma generation will occur in parallel to the main experimental goals.
 
-An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. The only parameter that has been shown to suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition is rapid \cite{kahalyDirectObservationDensityGradient2013}.
+An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. Evidence points to preplasma formation. The only parameter that has been shown to suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition to suppression is rapid \cite{kahalyDirectObservationDensityGradient2013}.
 
 The last available contrast measurements of the GEMINI PW laser are presented in Figure \ref{fig:geminicontrast}. 
 \begin{figure}
@@ -127,7 +125,7 @@ The last available contrast measurements of the GEMINI PW laser are presented in
 	\caption[Native contrast of the GEMINI PW laser system.]{Native contrast of the GEMINI PW laser system measured using the Sequoia third order autocorrelator scans. The noise floor of the detector is $\approx 1\times 10^{-9}$. The resolution is 100 fs, thus the main pulse is not resolved by the detector.}
 	\label{fig:geminicontrast}
 \end{figure}
-The \ac{DPM} setup improves the contrast by at least $10^5$, improving the contrast a few ps out to $10^9$. That is consistent with a double AR coating plus the peak measured reflectivity of \qty{50}{\%}, consistent with two AR coated PMs each with reflectivity $\approx$ \qty{0.5}{\%} when switched off and \qty{70}{\%} when switched on. More recent measurements of the GEMINI PW DPM system have found a reflectivity of \qty{1.23e-4}{\%} pre-switch on and \qty{60}{\%} after, corresponding to a contrast enhancement of \num{4.88e5}. Note that the DPM setup includes an acetate debris shield, without which shot quality quickly degrades from plasma ablation.
+The \ac{DPM} setup improves the contrast by at least $10^5$. More recent measurements of the GEMINI PW DPM system have found a reflectivity of \qty{1.23e-4}{\%} and \qty{60}{\%} before and after switch on, corresponding to a contrast enhancement of \num{4.88e5}. Note that the DPM setup includes an acetate debris shield, without which shot quality would quickly degrade from plasma ablation between the mirrors.
 
 HYADES simulations of the GEMINI PW pulse demonstrate acceptable preplasmas. 
 % TODO includes a plot of preplasma from HYADES.
@@ -180,7 +178,7 @@ Write about PIC simulations here.
 
 Measuring the HHG from attosecond electron bunches.
 
-
+It is indispensable, to test the new predictions for oblique incidence energy scalings and total electron bunch charge along with the angle of bunch ejection, the non-zero transverse vector potential of the laser will prevent the bunch from propagating directly along the transmission axis. It would also be useful to perform a parameter scan of the preplasma scale length. In this work so far, it was assumed that the optima for electron bunch production are simply those for \ac{HHG}, as was shown to be true for preplasma scale length in the Supplementary Information of \cite{thevenetVacuumLaserAcceleration2016} for their electron bunches in reflection.
 
 
 
